# wrist

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  profile_regression.py  profiler.py  pyproject.toml
.devcontainer/: devcontainer.json
docs/: MOTIVATION.md
misc_scripts/: comb_plots.py  gpu_profile_summary.py  indices.py  indices2.py  indices_claud.py  kvgen.py  plots.ipynb  visualize_torch_titan.py
src/: combinations.rs  kernels.rs  lib.rs  main.rs  network.rs  ops.rs  sharding.rs  solver.rs  tracing.rs  utils.rs
src/graph/: fx.rs  mod.rs  torch_titan.proto  torch_titan_pb2.py  torch_titan_pb2.pyi
src/kernels/: mod.rs
src/manual_models/: mod.rs  naive_mlp.rs  transformer.rs
src/models/: naive_mlp.rs  transformer.rs
src/ops/: attention.rs  composite.rs  double_linear.rs  mod.rs  scan.rs
src/sample_model/: __init__.py  async_model.py  example_lower.py  fake.py  fx_graph_pb2.py  fx_serialize.py  model.py  parallel_dims.py  simulate.py
