[package]
name = "wrist"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13"
rayon = "1.10"
csv = "1.3"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
petgraph = "0.8.1"
anyhow = "1.0.98"
protobuf = "3.7.2"
glob = "0.3.2"
clap = { version = "4.0", features = ["derive"] }
histo = "1"


[build-dependencies]
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.1.0"

[[bin]]
name = "trace_parser"
path = "src/bin/trace_parser.rs"

[[bin]]
name = "sim_fx"
path = "src/bin/sim_fx.rs"