[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-model"
version = "0.1.0"
description = "PyTorch Transformer with FSDP and Async Tensor Parallelism"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "protobuf>=3.20.0",
    "numpy>=1",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/sample_model"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
